--- a/environment.yml
+++ b/environment.yml
@@ -64,4 +64,4 @@ dependencies:
         - neptune-client>=0.4.109
         - horovod>=0.19.1
         - onnxruntime>=1.3.0
-        - azureml-core>=1.12.0
+        - azureml-sdk>=1.12.0
